# MCP_AI_Virtual_dev_pod

./: .env  CHANGELOG.md  FIXES_APPLIED.md  GROQ_SETUP.md  LICENSE  README.md  blog.db  config.env.example  debug_coder_agent.py  debug_coordinator.py  install.bat  install.sh  pyproject.toml  requirements.txt  run_streamlit.bat  run_streamlit.sh  setup.py  start_system.py  streamlit_app.py  test_complete_system.py  test_enhanced_system.py  test_file_storage.py  test_fixed_system.py  test_project_generator.py  test_system.py  test_test_0715a28e_3bf6_4312_b738_8a875a9c1b2d.py  test_test_29f847c3_0a01_4c29_a828_d896a0d3dffb.py  test_test_667f47d8_f17a_44c1_aca9_59bc43031e1e.py  test_test_anti_scraping_measures.py  test_test_api_integration.py  test_test_api_integration_failure.py  test_test_captcha.py  test_test_ce020431_c305_4091_b172_651de968e501.py  test_test_cpu_usage.py  test_test_d764f69c_e9a6_417c_beba_e88ebf631556.py  test_test_data_extraction.py  test_test_data_extraction_end_to_end.py  test_test_data_extraction_error.py  test_test_data_extraction_failure.py  test_test_data_extraction_integration.py  (+127 more)
examples/: __init__.py  advanced_usage.py  basic_usage.py
mcp_dev_pod/: __init__.py  config.py  coordinator.py  llm_client.py  main.py  mcp_server.py  models.py  project_generator.py
mcp_dev_pod/agents/: __init__.py  base_agent.py  coder_agent.py  planner_agent.py  tester_agent.py
mcp_dev_pod/tools/: __init__.py  file_tools.py  git_tools.py  python_tools.py  test_tools.py
mcp_multi_agent_dev_pod.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
